--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,33 @@
   <script type="text/javascript" src="../static/js/script.js"></script>
 
 </head>
+<style>
+  .drop-text{
+    color: #BDBDBD !important;
+  }
+
+  .drop-text:hover{
+    background: rgba(33,33,33,0.7) !important;
+    color: #eeeeee !important;
+  }
+
+  .dropdown-toggle{
+    color:#9e9e9e !important;
+  }
+
+  .dropdown-toggle:hover{
+    color:#BDBDBD  !important;
+  }
+
+  .dropdown-menu{
+    background-color: rgba(0,0,0,0.5) !important;
+  }
+
+  .navbar-brand{
+    color:#BDBDBD;
+  }
+
+</style>
 <body>
   <header>
     <nav class="navbar navbar-custom fixed-top navbar-expand-lg navbar-dark py-4 py-xl-1">
@@ -24,22 +51,38 @@
           <a class="navbar-brand" href="/">Veronique</a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#NavbarLinksLeft,#NavbarLinksRight">
-            <span class="navbar-toggler-icon" style="width:70px;height:70px;"></span>
+            <span class="navbar-toggler-icon" style="width:50px;height:50px;"></span>
           </button>
 
           <div class="collapse navbar-collapse justify-content-end" id="NavbarLinksRight">
 
             <ul class="navbar-nav mr-5">
               <li class="nav-item h5 my-2 mx-2">
-                <a class="nav-link" href="/">Strona Główna</a>
+                <a class="nav-link" href="/">
+                  Strona Główna
+                </a>
               </li>
 
               <li class="nav-item h5 my-2 mx-2">
-                <a class="nav-link" href="#">O nas</a>
+                <a class="nav-link" href="#">
+                  O nas
+                </a>
               </li>
 
-              <li class="nav-item h5 my-2 mx-2">
-                <a class="nav-link" href="/gallery">Galeria</a>
+              <li class="nav-item dropdown h5 my-2 mx-2" >
+                <a class="nav-link dropdown-toggle" id="navbarDropdown"
+                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Galeria
+                </a>
+
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item drop-text" href="/tattoos">
+                    Tatuaże
+                  </a>
+                  <a class="dropdown-item drop-text" href="/sketches">
+                    Szkice
+                  </a>
+                </div>
               </li>
 
               <li class="nav-item h5 my-2 mx-2">
@@ -210,7 +253,7 @@
       </div>
       <!-- ... Button -->
       <div class="col-xl-4 mt-5 my-xl-2 zoom">
-        <button type="button" class="btn-gallery" onclick="document.location.href='gallery'">...</button>
+        <button type="button" class="btn-gallery" onclick="document.location.href='tattoos'">...</button>
       </div>
 
     </div>
@@ -262,7 +305,7 @@
         </div>
 
         <div class="col-md-3 col-sm-12 col-sm-4 h4 mx-4">
-          <a class="fb fa-lg text-light" style="text-decoration: none;" href="/">Veronique</a>
+          <a class="fb fa-lg text-light" style="text-decoration: none;" href="#">Veronique</a>
         </div>
 
         <div class="col-md-3 col-sm-12 h4 mx-4 mt-4" style="color: #BDBDBD;">
